--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         <li><a href="">Контакти</a></li>
         </ul>
        </nav>
-       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-       <a href="tel:+380961111111">+38 096 111 11 11</a>
+       <ul>
+       <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+       <li><a href="tel:+380961111111">+38 096 111 11 11</a> </li>
+       </ul>
     </header>
     <main>
         <section>
@@ -54,8 +56,39 @@
             </ul>
         </section>
         <section>
-            
+            <h3>Наша команда</h3>
+            <ul>
+                <li> 
+                    <img src="./images/foto-1.jpg" alt="фото Ігора Дем'яненко"
+                    width="270"
+                    height="260"> 
+                   <h3>Ігор Дем'яненко</h3>
+                   <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/foto-2.jpg" alt="фото Ольги Рєпіной" 
+                    width="270"
+                    height="260">
+                <h3>Ольга Рєпіна</h3>
+                <p>Frontend Developer</p>
+                </li>
+                <li><img src="./images/foto-3.jpg" alt="фото Миколи Тарасова" 
+                    width="270"
+                    height="260">
+                 <h3>Микола Тарасов</h3>
+                 <p>Marketing</p>
+                </li>
+                <li><img src="./images/foto-4.jpg" alt="фото Михайла Єрмакова" 
+                    width="270"
+                    height="260">
+                 <h3>Михайло Єрмаков</h3>
+                  <p>UI Designer</p>    
+                </li>
+            </ul>
         </section>
     </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
