--- a/index.html
+++ b/index.html
@@ -63,32 +63,39 @@
                     width="270"
                     height="260"> 
                    <h3>Ігор Дем'яненко</h3>
-                   <p>Product Designer</p>
+                   <p lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/foto-2.jpg" alt="фото Ольги Рєпіной" 
                     width="270"
                     height="260">
                 <h3>Ольга Рєпіна</h3>
-                <p>Frontend Developer</p>
+                <p lang="en">Frontend Developer</p>
                 </li>
                 <li><img src="./images/foto-3.jpg" alt="фото Миколи Тарасова" 
                     width="270"
                     height="260">
                  <h3>Микола Тарасов</h3>
-                 <p>Marketing</p>
+                 <p lang="en">Marketing</p>
                 </li>
                 <li><img src="./images/foto-4.jpg" alt="фото Михайла Єрмакова" 
                     width="270"
                     height="260">
                  <h3>Михайло Єрмаков</h3>
-                  <p>UI Designer</p>    
+                  <p lang="en">UI Designer</p>    
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-
+  <a href="">WebStudio</a>
+<address>
+    <ul>
+        <li> <a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
+       <li><a href="tel:+380991111111">+38 099 111 11 11</a> </li>
+    </ul>
+</address>
     </footer>
 </body>
 </html>
